# SleepTimer

./: .gitignore  README.md  build.bat  countdown.html  gen_icon.py  index.html  installer.nsi  package-lock.json  package.json  tsconfig.json  vite.config.ts  构建说明.md
public/: countdown-toast.html  countdown-toast.js
src/: api.ts  countdown-page.ts  countdown.ts  diag.ts  icons.ts  main.ts  pickers.ts  store.ts  style.css  ui.ts
src-tauri/: Cargo.toml  build.rs  fallback.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs  models.rs  platform.rs
src/modules/: logs.ts  plans.ts  settings.ts
