[package]
name = "sleeptimer"
version = "1.0.0"
description = "SleepTimer 定时熄屏"
authors = ["Senior Developer"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sleeptimer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", features = ["clock"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
windows-sys = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
winreg = "0.52"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
