[package]
name = "sleeptimer"
version = "1.0.20260723"
description = "SleepTimer 定时熄屏"
authors = ["Senior Developer"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sleeptimer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", features = ["clock"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
windows-sys = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
winreg = "0.52"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1"
# 更新检测：向 GitHub Releases API 发起异步请求（native-tls 使用 Windows SChannel，兼容系统代理）
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored", "stream"] }
# 自动更新：下载安装包（流式写入 + 进度事件）
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
